Admin, jwt object for scurity context update with userRepository injection, listing all users only as admin